# mdformat-plugin-template

./: .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  DEPLOYMENT.md  README.md  cloud-config.yaml  copier.yml  ctt.toml  mise.toml  pyproject.toml  sync_pyproject.py  sync_with_ctt.sh  wip.txt
.ctt/default/: .copier-answers.yml  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  mise.toml  pyproject.toml  tox.ini
.ctt/default/.github/workflows/: tests.yml
.ctt/default/mdformat_eb_plugin_example/: __init__.py  _helpers.py  mdit_plugins.py  plugin.py
.ctt/default/mdformat_eb_plugin_example/_synced/blockquote_factories/: README.md  __init__.py  _blockquote_factories.py
.ctt/default/mdformat_eb_plugin_example/mdit_plugins/: __init__.py
.ctt/default/mdformat_template_noop/: __init__.py  plugin.py
.ctt/default/scripts/: canary.py  canary_repos.py
.ctt/default/tests/: helpers.py  test_hypothesis.py  test_mdformat.py  test_plugin.py
.ctt/default/tests/format/: test_fixtures.py  test_format.py
.ctt/default/tests/format/fixtures/: eb_plugin_example.md
.ctt/default/tests/render/: test_render.py
.ctt/default/tests/render/fixtures/: eb_plugin_example.md
.github/: dependabot.yml
package_template/: .pre-commit-config.yaml  .pre-commit-test.yaml  .ruff.toml.jinja  AGENTS.md.jinja  CONTRIBUTING.md.jinja  README.md.jinja  _copier_post_generation.json.jinja  _copier_post_generation.py  pyproject.toml.jinja  remove-if-found.txt  tox.ini.jinja  {{ _copier_conf.answers_file }}.jinja
package_template/.github/workflows/: tests.yml  tests.yml.jinja
package_template/mdformat_plugin/: __init__.py
package_template/mdformat_{{ plugin_name }}/: __init__.py.jinja  plugin.py.jinja
package_template/mdformat_{{ plugin_name }}/_synced/blockquote_factories/: _blockquote_factories.py
package_template/scripts/: canary.py.jinja  canary_repos.py.jinja
package_template/tests/: test_hypothesis.py.jinja  test_mdformat.py.jinja
package_template/tests/format/: test_fixtures.py  test_fixtures.py.jinja  test_format.py.jinja
package_template/tests/render/: test_render.py.jinja
package_template/tests/render/fixtures/: {{ plugin_name }}.md
package_template/{{ package_name_py }}/: plugin.py
