[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.10"]

[project]
authors = [
  {email = "executablebooks@gmail.com", name = "executablebooks"},
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mdformat >= 0.7.19",
  "mdit-py-plugins >= 0.4.1",
]
keywords = ["markdown", "markdown-it", "mdformat", "mdformat_plugin_template"]
license = "MIT"
license-files = ["LICENSE"]
name = "mdformat_eb_plugin_example"
readme = "README.md"
requires-python = ">=3.10.0"
version = "0.0.1"

[project.entry-points."mdformat.parser_extension"]
eb_plugin_example = "mdformat_eb_plugin_example"

[project.optional-dependencies]
test = [
  "pytest >= 9.0.1",
  "pytest-beartype >= 0.2.0",
  "pytest-cov >= 7.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/executablebooks/mdformat-eb-plugin-example/issues"
"Changelog" = "https://github.com/executablebooks/mdformat-eb-plugin-example/releases"
homepage = "https://github.com/executablebooks/mdformat-eb-plugin-example"

[tool.commitizen]
tag_format = "v${version}"
version = "0.0.1"
version_files = ["mdformat_eb_plugin_example/__init__.py", "pyproject.toml:^version"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
enable_error_code = ["ignore-without-code", "possibly-undefined", "redundant-expr", "truthy-bool"]
extra_checks = true
files = ["mdformat_eb_plugin_example", "tests"]
no_implicit_reexport = true
python_version = "3.10"
show_column_numbers = true
show_error_codes = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pyright]
include = ["mdformat_eb_plugin_example", "tests"]
pythonVersion = "3.10"

[tool.pytest-watcher]
ignore_patterns = []
now = true
patterns = ["*.ambr", "*.md", "*.py"]
runner = "tox"
# PLANNED: requires support for TYPE_CHECKING https://github.com/beartype/beartype/issues/477
# runner_args = ["-e", "py312-test", "--", "--exitfirst", "--failed-first", "--new-first", "-vv", "--beartype-packages=mdformat_eb_plugin_example"]
runner_args = ["-e", "py312-test", "--", "--exitfirst", "--failed-first", "--new-first", "-vv"]

[tool.ruff]
# Docs: https://github.com/charliermarsh/ruff
# Tip: poetry run python -m ruff --explain RUF100
line-length = 88
target-version = 'py310'

[tool.ruff.lint]
ignore = [
  'ANN002', # Missing type annotation for `*args`
  'ANN003', # Missing type annotation for `**kwargs`
  'BLE001', # Do not catch blind exception: `Exception`
  'COM812', # missing-trailing-comma
  'CPY001', # Missing copyright notice at top of file
  'D203', # "1 blank line required before class docstring" (Conflicts with D211)
  'D213', # "Multi-line docstring summary should start at the second line" (Conflicts with D212)
  'DOC201', # `return` is not documented in docstring
  'DOC402', # `yield` is not documented in docstring
  'E501', # Line too long (89 > 88)
  'EM101', # Exception must not use a string literal, assign to variable first
  'FBT001', # Boolean-typed positional argument in function definition
  'FIX001', # Line contains FIXME
  'FIX002', # Line contains TODO
  'FIX004', # Line contains HACK
  'N803', # Argument name `startLine` should be lowercase
  'N815', # Variable `lineMax` in class scope should not be mixedCase
  'PLR0913', # Too many arguments in function definition (6 > 5)
  'S101', # Use of `assert` detected
  'TC002', # Move third-party import `mdformat.renderer.typing.Postprocess` into a type-checking block (for beartype)
  'TC003', # Move standard library import `argparse` into a type-checking block (for beartype)
  'TD001', # Invalid TODO tag: `FIXME`
  'TD002', # Missing author in TODO; try: `# TODO(<author_name>): ...`
  'TD003', # Missing issue link on the line following this TODO
  'TRY003', # Avoid specifying long messages outside the exception class
]
preview = true
select = ['ALL']
unfixable = [
  'ERA001', # Commented out code
]

[tool.ruff.lint.isort]
known-first-party = ['mdformat_eb_plugin_example', 'tests']

[tool.ruff.lint.per-file-ignores]
'__init__.py' = [
  'D104', # Missing docstring in public package
]
'tests/*.py' = [
  'ANN001', # Missing type annotation for function argument
  'ANN201', # Missing return type annotation for public function
  'ANN202', # Missing return type annotation for private function `test_make_diffable`
  'ARG001', # Unused function argument: `line`
  'D100', # Missing docstring in public module
  'D103', # Missing docstring in public function
  'PLC2701', # Private name import `_<>` from external module
  'PT004', # flake8-pytest-style: fixture does not return
  'S101', # Use of `assert` detected
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = true
in_place = true
trailing_comma_inline_array = true

[tool.tomlsort.overrides."tool.pytest-watcher.*"]
inline_arrays = false

[tool.tomlsort.overrides."tool.tox.env.*"]
inline_arrays = false

[tool.tox]
# Docs: https://tox.wiki/en/4.23.2/config.html#core
basepython = ["python3.10", "python3.12"]
env_list = ["py310-hook", "py310-test", "py312-cz", "py312-prek", "py312-ruff", "py312-test", "py312-type"]
isolated_build = true
requires = ["tox>=4.32.0"]
skip_missing_interpreters = false

[tool.tox.env."py310-hook"]
commands = [["prek", "run", "--config=.pre-commit-test.yaml", "--all-files", {default = ["--show-diff-on-failure", "--verbose"], extend = true, replace = "posargs"}]]
deps = "prek>=0.2.17"

[tool.tox.env."py310-test"]
commands = [["pytest", "--cov=mdformat_eb_plugin_example"]]
extras = ["test"]

[tool.tox.env."py312-cz"]
commands = [["cz", "bump", {default = [], extend = true, replace = "posargs"}]]
deps = "commitizen>=4.10.0"
description = "Bump version using commitizen. Optionally specify: '-- --increment MAJOR|MINOR|PATCH' or '-- --dry-run'"
skip_install = true

[tool.tox.env."py312-prek"]
commands = [["prek", "run", "--all-files", {default = [], extend = true, replace = "posargs"}]]
deps = "prek>=0.2.17"
skip_install = true

[tool.tox.env."py312-ruff"]
commands = [
  ["ruff", "check", ".", "--fix", {default = [], extend = true, replace = "posargs"}],
  ["ruff", "format", "."],
]
deps = "ruff>=0.14.5"
description = "Optionally, specify: '-- --unsafe-fixes'"
skip_install = true

[tool.tox.env."py312-test"]
commands = [["pytest", "--cov=mdformat_eb_plugin_example", {default = [], extend = true, replace = "posargs"}]]
# PLANNED: requires support for TYPE_CHECKING https://github.com/beartype/beartype/issues/477
# description = "Optionally, specify: '-- --exitfirst --failed-first --new-first -vv --beartype-packages=mdformat_eb_plugin_example"
description = "Optionally, specify: '-- --exitfirst --failed-first --new-first -vv"
extras = ["test"]

[tool.tox.env."py312-type"]
commands = [["mypy", "./mdformat_eb_plugin_example", {default = [], extend = true, replace = "posargs"}]]
deps = ["mypy>=1.18.2"]

[tool.tox.env_run_base]
# Validates that commands are set
commands = [["error-commands-are-not-set"]]

[tool.uv.build-backend]
module-root = ""
